src/OpenCvSharpExtern/core_Mat.h

CVAPI(ExceptionStatus) core_Mat_reserve(cv::Mat *self, size_t sz)
{
    return cvTry([&] {
    self->reserve(sz);
    });
}
CVAPI(ExceptionStatus) core_Mat_reserveBuffer(cv::Mat *self, size_t sz)
{
    return cvTry([&] {
    self->reserveBuffer(sz);
    });
}
CVAPI(ExceptionStatus) core_Mat_resize1(cv::Mat *obj, size_t sz)
{
    return cvTry([&] {
    obj->resize(sz);
    });
}
CVAPI(ExceptionStatus) core_Mat_resize2(
    cv::Mat *obj,
    size_t sz,
    interop::Scalar s)
{
    return cvTry([&] {
    obj->resize(sz, cpp(s));
    });
}
CVAPI(ExceptionStatus) core_Mat_pop_back(cv::Mat *obj, size_t nelems)
{
    return cvTry([&] {
    obj->pop_back(nelems);
    });
}
CVAPI(ExceptionStatus) core_Mat_locateROI(
    cv::Mat *self,
    interop::Size *wholeSize,
    interop::Point *ofs)
{
    return cvTry([&] {
    cv::Size wholeSize2;
    cv::Point ofs2;
    self->locateROI(wholeSize2, ofs2);
    *wholeSize = c(cv::Size(wholeSize2.width, wholeSize2.height));
    *ofs = c(cv::Point(ofs2.x, ofs2.y));
    });
}
CVAPI(ExceptionStatus) core_Mat_adjustROI(
    cv::Mat *self,
    int dtop,
    int dbottom,
    int dleft,
    int dright,
    cv::Mat** returnValue)
{
    return cvTry([&] {
    const auto ret = self->adjustROI(dtop, dbottom, dleft, dright);
    *returnValue = new cv::Mat(ret);
    });
}
CVAPI(ExceptionStatus) core_Mat_subMat1(
    cv::Mat *self,
    int rowStart,
    int rowEnd,
    int colStart,
    int colEnd,
    cv::Mat** returnValue)
{
    return cvTry([&] {
    const cv::Range rowRange(rowStart, rowEnd);
    const cv::Range colRange(colStart, colEnd);
    const auto ret = (*self)(rowRange, colRange);
    *returnValue = new cv::Mat(ret);
    });
}
CVAPI(ExceptionStatus) core_Mat_subMat2(
    cv::Mat *self,
    int nRanges,
    interop::Range *ranges,
    cv::Mat** returnValue)
{
    return cvTry([&] {
    std::vector<cv::Range> rangesVec(nRanges);
    for (auto i = 0; i < nRanges; i++)
    {
        rangesVec[i] = (cpp(ranges[i]));
    }
    const auto ret = (*self)(&rangesVec[0]);
    *returnValue = new cv::Mat(ret);
    });
}
CVAPI(ExceptionStatus) core_Mat_isContinuous(cv::Mat *self, int *returnValue)
{
    return cvTry([&] {
    *returnValue = self->isContinuous() ? 1 : 0;
    });
}
CVAPI(ExceptionStatus) core_Mat_isSubmatrix(cv::Mat *self, int *returnValue)
{
    return cvTry([&] {
    *returnValue = self->isSubmatrix() ? 1 : 0;
    });
}
CVAPI(ExceptionStatus) core_Mat_elemSize(cv::Mat *self, size_t *returnValue)
{
    return cvTry([&] {
    *returnValue = self->elemSize();
    });
}
CVAPI(ExceptionStatus) core_Mat_elemSize1(cv::Mat *self, size_t *returnValue)
{
    return cvTry([&] {
    *returnValue = self->elemSize1();
    });
}
CVAPI(ExceptionStatus) core_Mat_type(cv::Mat *self, int *returnValue)
{
    return cvTry([&] {
    *returnValue = self->type();
    });
}
CVAPI(ExceptionStatus) core_Mat_depth(cv::Mat *self, int *returnValue)
{
    return cvTry([&] {
    *returnValue = self->depth();
    });
}
CVAPI(ExceptionStatus) core_Mat_channels(cv::Mat *self, int *returnValue)
{
    return cvTry([&] {
    *returnValue = self->channels();
    });
}
CVAPI(ExceptionStatus) core_Mat_step1(
    cv::Mat *self,
    int i,
    size_t *returnValue)
{
    return cvTry([&] {
    *returnValue = self->step1(i);
    });
}
CVAPI(ExceptionStatus) core_Mat_empty(cv::Mat *self, int *returnValue)
{
    return cvTry([&] {
    *returnValue = self->empty() ? 1 : 0;
    });
}
CVAPI(ExceptionStatus) core_Mat_total1(cv::Mat *self, size_t *returnValue)
{
    return cvTry([&] {
    *returnValue = self->total();
    });
}
CVAPI(ExceptionStatus) core_Mat_total2(
    cv::Mat *self,
    int startDim,
    int endDim,
    size_t *returnValue)
{
    return cvTry([&] {
    *returnValue = self->total(startDim, endDim);
    });
}
CVAPI(ExceptionStatus) core_Mat_checkVector(
    cv::Mat *self,
    int elemChannels,
    int depth,
    int requireContinuous,
    int *returnValue)
{
    return cvTry([&] {
    *returnValue = self->checkVector(elemChannels, depth, requireContinuous != 0);
    });
}
CVAPI(ExceptionStatus) core_Mat_ptr1d(
    cv::Mat *self,
    int i0,
    uchar **returnValue)
{
    return cvTry([&] {
    *returnValue = self->ptr(i0);
    });
}
CVAPI(ExceptionStatus) core_Mat_ptr2d(
    cv::Mat *self,
    int i0,
    int i1,
    uchar **returnValue)
{
    return cvTry([&] {
    *returnValue = self->ptr(i0, i1);
    });
}
CVAPI(ExceptionStatus) core_Mat_ptr3d(
    cv::Mat *self,
    int i0,
    int i1,
    int i2,
    uchar **returnValue)
{
    return cvTry([&] {
    *returnValue = self->ptr(i0, i1, i2);
    });
}
CVAPI(ExceptionStatus) core_Mat_ptrnd(
    cv::Mat *self,
    int *idx,
    uchar **returnValue)
{
    return cvTry([&] {
    *returnValue = self->ptr(idx);
    });
}
CVAPI(ExceptionStatus) core_Mat_flags(cv::Mat *self, int *returnValue)
{
    return cvTry([&] {
    *returnValue = self->flags;
    });
}
CVAPI(ExceptionStatus) core_Mat_dims(cv::Mat *self, int *returnValue)
{
    return cvTry([&] {
    *returnValue = self->dims;
    });
}
CVAPI(ExceptionStatus) core_Mat_rows(cv::Mat *self, int *returnValue)
{
    return cvTry([&] {
    *returnValue = self->rows;
    });
}
CVAPI(ExceptionStatus) core_Mat_cols(cv::Mat *self, int *returnValue)
{
    return cvTry([&] {
    *returnValue = self->cols;
    });
}
CVAPI(ExceptionStatus) core_Mat_data(cv::Mat *self, uchar **returnValue)
{
    return cvTry([&] {
    *returnValue = self->data;
    });
}
CVAPI(ExceptionStatus) core_Mat_datastart(cv::Mat *self, const uchar **returnValue)
{
    return cvTry([&] {
    *returnValue = self->datastart;
    });
}
CVAPI(ExceptionStatus) core_Mat_dataend(cv::Mat *self, const uchar **returnValue)
{
    return cvTry([&] {
    *returnValue = self->dataend;
    });
}
CVAPI(ExceptionStatus) core_Mat_datalimit(cv::Mat *self, const uchar **returnValue)
{
    return cvTry([&] {
    *returnValue = self->datalimit;
    });
}
CVAPI(ExceptionStatus) core_Mat_size(cv::Mat *self, interop::Size *returnValue)
{
    return cvTry([&] {
    // OpenCV 5's MatSize::operator()() asserts dims <= 2, but OpenCvSharp historically
    // returns Size(size[1], size[0]) for multi-dimensional matrices (OpenCV 4 behavior).
    if (self->dims > 2)
        *returnValue = c(cv::Size(self->size[1], self->size[0]));
    else
        *returnValue = c(self->size());
    });
}
CVAPI(ExceptionStatus) core_Mat_sizeAt(
    cv::Mat *self,
    int i,
    int *returnValue)
{
    return cvTry([&] {
    *returnValue = self->size[i];
    });
}
CVAPI(ExceptionStatus) core_Mat_step(cv::Mat *self, size_t *returnValue)
{
    return cvTry([&] {
    *returnValue = self->step;
    });
}
CVAPI(ExceptionStatus) core_Mat_stepAt(
    cv::Mat *self,
    int i,
    size_t *returnValue)
{
    return cvTry([&] {
    *returnValue = self->step[i];
    });
}
      
CVAPI(ExceptionStatus) core_abs_Mat(cv::Mat *m, cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto ret = cv::abs(*m);
    *returnValue = new cv::MatExpr(ret);
    });
}
CVAPI(ExceptionStatus) core_Mat_setMatData(
    cv::Mat *obj,
    uchar *vals,
    int *returnValue)
{
    return cvTry([&] {
    *returnValue = internal_Mat_set(obj, vals) ? 1 : 0;
    });
}
CVAPI(ExceptionStatus) core_Mat_getMatData(
    cv::Mat *obj,
    uchar *vals,
    int *returnValue)
{    
    return cvTry([&] {
    *returnValue = internal_Mat_get(obj, vals) ? 1 : 0;
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Mat(cv::Mat *self, cv::Mat *m)
{
    return cvTry([&] {
    self->push_back(*m);
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_char(cv::Mat *self, char v)
{
    return cvTry([&] {
    self->push_back(v);
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_uchar(cv::Mat *self, uchar v)
{
    return cvTry([&] {
    self->push_back(v);
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_short(cv::Mat *self, short v)
{
    return cvTry([&] {
    self->push_back(v);
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_ushort(cv::Mat *self, ushort v)
{
    return cvTry([&] {
    self->push_back(v);
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_int(cv::Mat *self, int v)
{
    return cvTry([&] {
    self->push_back(v);
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_float(cv::Mat *self, float v)
{
    return cvTry([&] {
    self->push_back(v);
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_double(cv::Mat *self, double v)
{
    return cvTry([&] {
    self->push_back(v);
    });
}